# AI_Agent

./: .gitignore  package-lock.json  package.json
ai_backend/: chat.db  pyproject.toml
ai_backend/app/: .gitignore  docker-compose.yml  main.py
ai_backend/app/api/v1/: app.py
ai_backend/app/api/v1/endpoints/: chat.py  file.py  health.py
ai_backend/app/core/: config.py  database.py
ai_backend/app/models/: chat.py  document.py
ai_backend/app/schemas/: chat.py
ai_backend/app/services/: embedding.py  ingestion.py  llm.py  memory.py  retrieval.py
ai_fronted/: index.html
ai_frontend/: package-lock.json  package.json
ai_frontend/src/: App.vue  main.ts
ai_frontend/src/components/: ChatMain.vue
